# libqtxdg

./: .gitignore  CMakeLists.txt
cmake/: create_portable_headers.cmake  xdgqt-config.cmake.in  xdgqtX-config.cmake.in  xdgqt_use.cmake.in
